# easyorder

./: .gitignore  .semgrep.yml  CLAUDE.md  docker-compose.yml  main.py  otel-collector.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 6eebad41f9ca_drop_channel_transaction_id_from_.py  94bcc6bc46cd_add_orders_table.py  9675f288042b_init_plan_table.py  a4a47bcc5dc0_add_payment_attempts_table.py  ab517a0aa0b3_add_refund_table.py  abadc7650b68_add_admin_system_config_oauth_client_.py  bba25c592c11_add_subscriptions_table.py
app/: config.py  database.py  main.py  telemetry.py
app/api/: deps.py
app/api/v1/: admins.py  auth.py  oauth_clients.py  orders.py  payment_attempts.py  plans.py  (+6 more)
app/models/: __init__.py  admin.py  base.py  oauth_client.py  order.py  payment_attempt.py  payment_transaction.py  plan.py  refund.py  subscription.py  system_config.py
app/repositories/: admin.py  base.py  oauth_client.py  order.py  payment_attempt.py  payment_transaction.py  plan.py  refund.py  subscription.py  system_config.py
app/schemas/: admin.py  auth.py  oauth_client.py  order.py  payment_attempt.py  payment_transaction.py  plan.py  refund.py  renewal.py  subscription.py  system_config.py
app/services/: __init__.py  admin.py  auth.py  base.py  oauth_client.py  order.py  payment_attempt.py  payment_transaction.py  plan.py  proration.py  refund.py  renewal.py  subscription.py  system_config.py
docs/: requirements.md
docs/conventions/: architecture.md  git.md  logging.md  observability.md
postman/collections/: admins.json  auth.json  oauth-clients.json  observability.json  orders.json  payment-attempts.json  plans.json  refunds.json  renewals.json  subscriptions.json  system-configs.json
postman/environments/: dev.json  docker.json
postman/results/: plans-results.json
tests/: conftest.py  test_violations.py
tests/test_api/: conftest.py  test_admin_api.py  test_auth_api.py  test_oauth_client_api.py  test_order_api.py  test_payment_attempt_api.py  test_payment_transaction_api.py  test_plan_api.py  test_refund_api.py  test_renewal_api.py  test_subscription_api.py  test_system_config_api.py
tests/test_repositories/: test_admin_repository.py  test_base_repository.py  test_oauth_client_repository.py  test_order_repository.py  test_payment_attempt_repository.py  test_payment_transaction_repository.py  test_plan_repository.py  test_refund_repository.py  test_subscription_repository.py  test_system_config_repository.py
tests/test_services/: conftest.py  test_admin_service.py  test_auth_service.py  test_oauth_client_service.py  test_order_service.py  test_payment_attempt_service.py  test_payment_transaction_service.py  test_plan_service.py  test_proration_service.py  test_refund_service.py  test_renewal_service.py  test_subscription_service.py  test_system_config_service.py
(+1 files in other folders)
