[project]
name = "easyorder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.2",
    "pydantic-settings>=2.8.1",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.34.2",
]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "ruff>=0.15.8",
    "semgrep>=1.156.0",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["F", "E", "I", "N", "UP", "B", "SIM", "RUF", "S", "DTZ", "T10", "T20", "ERA", "A", "RET", "C4", "PLE"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]  # 测试中允许 assert
"app/api/**" = ["B008"]  # FastAPI Depends() 需要在参数默认值中调用

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
reportMissingTypeStubs = false
